PRJ_VER=0.8.2.99
SUMMARY=Release version are now defined in cmake-fedora.conf; New command: koji-build-scratch
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- New command: koji-build-scratch for scratch build on all supported
  releases.
- Release versions are now defined in configuration file for easy
  maintenance.
- RELEASE_ON_FEDORA: support new tags: "fedora" for current fedora,
  and "epel" for current epel.
- Variable Removed:
  FEDORA_NEXT_RELEASE
  FEDORA_NEXT_RELEASE_TAGS
  FEDORA_LATEST_RELEASE
  FEDORA_PREVIOUS_RELEASE
